--- a/package.json
+++ b/package.json
@@ -5,11 +5,25 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npm run eslint && npm run prettier:check",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "eslint": "eslint --ext .ts src/ --color",
+    "eslint:fix": "eslint --ext .ts src/ --color --fix",
+    "prettier:check": "prettier --check src/**/*.{ts,json}",
+    "prettier:fix": "prettier --write src/**/*.{ts,json}",
+    "precommit": "lint-staged",
+    "husky:init": "husky install && husky add .husky\\pre-commit \"npm run precommit\""
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint-plugin-import": "^2.26.0",
+    "lint-staged": "^12.4.1",
+    "prettier": "2.6.2",
     "sass": "^1.51.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9"
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9",
+    "vite-plugin-eslint": "^1.6.0"
   }
 }
